--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "lint": "eslint ./ --ext .js,.jsx -c ./.eslintrc --fix && prettier --write --ignore-unknown ./src/**/*"
+    "lint": "eslint ./ --ext .js,.jsx -c ./.eslintrc --fix && prettier --write --ignore-unknown ./src/**/*",
+    "test": "react-scripts test --watchAll=false --runInBand"
   },
   "browserslist": {
     "production": [
@@ -31,6 +32,9 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
